// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateBucket /> contains create bucket form 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "t3oby4",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "t3oby4",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <CreateBucket>
      <div>
        <article
          className="content item-editor-page"
        >
          <div
            className="card card-block"
          >
            <p>
              Unauthorized! Please 
              <Link
                replace={false}
                to="/login"
              >
                <a
                  href="/login"
                  onClick={[Function]}
                >
                  login
                </a>
              </Link>
            </p>
          </div>
        </article>
      </div>
    </CreateBucket>
  </Router>
</MemoryRouter>
`;

exports[`<CreateBucket /> should change values in the form 1`] = `
<MemoryRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "y5i1f5",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "y5i1f5",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <CreateBucket>
      <div>
        <article
          className="content item-editor-page"
        >
          <div
            className="card card-block"
          >
            <p>
              Unauthorized! Please 
              <Link
                replace={false}
                to="/login"
              >
                <a
                  href="/login"
                  onClick={[Function]}
                >
                  login
                </a>
              </Link>
            </p>
          </div>
        </article>
      </div>
    </CreateBucket>
  </Router>
</MemoryRouter>
`;
